bug: fix issue on mobile with nav bar not navigating to other pages

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,10 @@ footer {
 	font-size: 30px;
 }
 
+.nav-menu {
+	min-height: 28px;
+}
+
 /*Adjustements to nav bar*/
 .nav-menu li, #footer-social li {
 	font-size: 20px;
@@ -144,7 +148,7 @@ footer {
 .about, .contact, .members {
 	margin-top: 5%;
 	margin-bottom: 5%;
-	color: #000;
+	color: red;
 }
 .about {
 	text-align: center;
@@ -355,7 +359,6 @@ and (max-device-width : 375px) {
 	/*.title {
 		text-align: center;
 	}*/
-
 	.welcome {
 		width: 250px;
 		height: 141px;
